--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,10 @@
-# This file is a template, and might need editing before it works on your project.
----
-# All available Hugo versions are listed here:
-# https://gitlab.com/pages/hugo/container_registry
 image: registry.gitlab.com/pages/hugo:latest
 
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
+
+before_script:
+  - apk add --update --no-cache git
 
 test:
   script:
