--- a/config.yaml
+++ b/config.yaml
@@ -39,7 +39,7 @@ menu:
     - name: Home
       url: /
       weight: 1
-    - name: Blog
+    - name: Pages
       url: /post/
       weight: 2
     - name: Tags
