--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,22 +1,21 @@
-image: registry.gitlab.com/pages/hugo:latest
-
-variables:
-  GIT_SUBMODULE_STRATEGY: recursive
-
-before_script:
-  - apk add --update --no-cache git
-
-test:
-  script:
-    - hugo
-  except:
-    - master
+stages:
+    - deploy
 
 pages:
+  stage: deploy
+  image: rust
+  variables:
+    CARGO_HOME: $CI_PROJECT_DIR/cargo
+  before_script:
+    - export PATH="$PATH:$CARGO_HOME/bin"
+    - mdbook --version || cargo install mdbook
   script:
-    - hugo
-  artifacts:
-    paths:
-      - public
+        - mdbook build -d public
   only:
-    - master
+      - master
+  artifacts:
+      paths:
+          - public
+  cache:
+    paths:
+    - $CARGO_HOME/bin
